fix: dark mode in global.css

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -136,6 +136,5 @@
     @apply bg-background text-foreground font-display;
   }
   html {
-    @apply dark font-display;
   }
 }
